--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<meta name="google-site-verification" content="K97O6_8crLfQvnhy83lAtK18myiIGn_ShYm7fA5tFsg" />
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="K97O6_8crLfQvnhy83lAtK18myiIGn_ShYm7fA5tFsg" />
+    <title>Selamat Datang di GitHub Pages</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 20px;
+            font-size: 24px;
+        }
+        main {
+            padding: 20px;
+        }
+        footer {
+            background: #333;
+            color: #fff;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        Selamat Datang di GitHub Pages
+    </header>
+    <main>
+        <h1>Halo Dunia!</h1>
+        <p>Ini adalah halaman sederhana yang dihosting di GitHub Pages.</p>
+    </main>
+    <footer>
+        &copy; 2025 Dibuat dengan ❤️ oleh Anda
+    </footer>
+</body>
+</html>
